# herald

./: .env.example  .gitignore  ADDING_EVENTS.md  AGENT.md  AGENTVERSE_README.md  ARCHITECTURE.md  CLAUDE.md  FETCHAI_DELIVERABLES.md  HANDOFF.md  PIKA_PLAN.md  README.md  STATUS.md  pyproject.toml  skills-lock.json
dashboard/: datasource.py  pika_jobs.py  server.py  sim.py
dashboard/static/: app.js  floor.js  index.html  library.html  library.js  login.html  replay.html  replay.js  style.css
docs/: TEAM.md
docs/arrows/: agent-memory.md  core-agents.md  dashboard.md  domain-invariants.md  incident-replay.md  index.yaml  low-oxygen-alert.md  orchestrator-skeleton.md  patient-ehr.md  patient-intake.md  redis-store.md  status-summary.md
docs/decisions/: 2026-06-20-event-flow-decisions.md  2026-06-20-intake-orchestration-mode.md  2026-06-20-round-2-event-mechanics.md
er_twin/: __init__.py  active_events.py  addresses.py  config.py  connect_orchestrator.py  display.py  ehr.py  main.py  memory.py  oxygen_coord.py  oxygen_flow.py  protocols.py  replay.py  status_summary.py  storage.py
fetch-ai-documentation/: CLAUDE.md  agentic-llm.md  asi-one-overview.md  fetch-ai-hackathon-context.md  fetch-ai-overview-transcript.md  fetchai-hackathon-req.md  models.md  quickstart.md  tool-calling.md  uagents-chat-protocol.md
fixtures/: ehr_master.json
redis-documentation/: CLAUDE.md  data-store.md  document-database.md  faq.md  rag.md  redis-8-8-commands.md  redis-data-types.md  redis-hackathon-req.md  redis-in-ai.md  vector-database.md
scripts/: build_ehr.py  build_pika_prompt.py  capture_replay_frames.py  pika_replay_operator.md  redis_smoke.py  replay_meta.py  run_pika_identity_check.ps1  run_pika_keyframes.ps1  run_pika_replay.ps1  seed_redis.py
spikes/: mailbox_inside_bureau_spike.py  oxygen_async_flow_spike.py
tests/: conftest.py  test_dashboard.py  test_domain_invariants.py  test_ehr.py  test_event_discharge.py  test_event_intake.py  test_event_oxygen.py  test_event_registry.py  test_event_summary.py  test_integration_wiring.py  test_memory.py  test_orchestrator_skeleton.py  test_patient_pool.py  test_replay.py  test_storage.py
(+37 files in other folders)
