[project]
name = "er-twin"
version = "0.1.0"
description = "ER Room Digital Twin — Fetch.ai uAgents + Bureau + ASI:One"
requires-python = ">=3.11,<3.13"
dependencies = [
    "uagents",
    "uagents-core",
    "pydantic-settings",
    "redis",
    "redis-agent-memory",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
# Vendored third-party clone (Fetch.ai Innovation Lab examples) — not our code to lint.
extend-exclude = ["fetch-ai-documentation/innovation-lab-examples"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
