[project]
name = "er-twin"
version = "0.1.0"
description = "ER Room Digital Twin — Fetch.ai uAgents + Bureau + ASI:One"
requires-python = ">=3.11,<3.13"
dependencies = [
    "uagents",
    "uagents-core",
    "pydantic-settings",
    "redis",
    "redis-agent-memory",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "itsdangerous",
    "authlib",
    "openai>=2.43.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx",
    # Headless frame capture for the incident replay (scripts/capture_replay_frames.py, Phase 3).
    # After `uv sync`, run `uv run playwright install chromium` once to fetch the browser.
    "playwright>=1.40",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
# Vendored third-party clone (Fetch.ai Innovation Lab examples) — not our code to lint.
extend-exclude = ["fetch-ai-documentation/innovation-lab-examples"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
